--- a/test/src/report/test02_01_2018_08_49_45.html
+++ b/test/src/report/test02_01_2018_08_49_45.html
@@ -297,7 +297,7 @@ ExtentReports 2.0
 </div>
 <!-- /container -->
 
-<!-- test dashboard counts setting -->
+<pNodetest dashboard counts setting -->
 <div id='test-count-setting' class='modal bottom-sheet'> 
 <div class='modal-content'> 
 <h5>Configure Tests Count Setting</h5> 
@@ -314,7 +314,7 @@ ExtentReports 2.0
 <a href='#!' class='modal-action modal-close waves-effect waves-green btn'>Save</a> 
 </div> 
 </div>
-<!-- /test dashboard counts setting -->
+<!pNodetest dashboard counts setting -->
 
 <!-- filter for step status -->
 <div id='step-status-filter' class='modal bottom-sheet'> 
