--- a/test/src/report/extentreport.html
+++ b/test/src/report/extentreport.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 6, 2018 01:38:14 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 10, 2018 08:35:21 PM</span>
 				</a>
 			</li>
 			<li>
@@ -158,13 +158,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>PaytmSearch</span>
-						<span class='test-time'>Jan 6, 2018 01:38:31 PM</span>
+						<span class='test-time'>Jan 10, 2018 08:35:30 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 6, 2018 01:38:31 PM</span>
-	<span class='label end-time'>Jan 6, 2018 01:38:31 PM</span>
+	<span class='label start-time'>Jan 10, 2018 08:35:30 PM</span>
+	<span class='label end-time'>Jan 10, 2018 08:35:30 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
@@ -173,15 +173,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
-						<span class='test-name'>QAVsite</span>
-						<span class='test-time'>Jan 6, 2018 01:38:33 PM</span>
+						<span class='test-name'>QAV site</span>
+						<span class='test-time'>Jan 10, 2018 08:35:30 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 6, 2018 01:38:33 PM</span>
-	<span class='label end-time'>Jan 6, 2018 01:38:35 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+992ms</span>
+	<span class='label start-time'>Jan 10, 2018 08:35:30 PM</span>
+	<span class='label end-time'>Jan 10, 2018 08:35:37 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 7s+217ms</span>
 </div>
 	<div class='test-desc'>Verify HomePage </div>
 	<div class='test-steps'>
@@ -196,12 +196,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:38:34 PM</td>
-					<td class='step-details'>Online Shopping In India – Shop Online for Mobiles Phones, Electronics, Home Decors, Sports, Apparel & Accessories @ Paytmmall.com contain QA manual</td>
+					<td class='timestamp'>8:35:37 PM</td>
+					<td class='step-details'>Amazon.in Today's Deals: Great Savings. Every Day. contain Amazon</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:38:35 PM</td>
+					<td class='timestamp'>8:35:37 PM</td>
 					<td class='step-details'>search</td>
 				</tr>
 			</tbody>
@@ -256,19 +256,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 6, 2018 01:38:14 PM</div>
+					<div class='panel-lead'>Jan 10, 2018 08:35:21 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 6, 2018 01:38:35 PM</div>
+			 		<div class='panel-lead'>Jan 10, 2018 08:35:37 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>20,691ms</div>
+					<div class='panel-lead'>16,499ms</div>
 				</div>
 			</div>
 		</div>
